Car management/force-app/main/default/objects/Salon__c/Salon__c.object-meta.xml
<CustomObject>
    <label>Salon</label>
    <nameField>
        <label>Nazwa Salonu</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salony</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>