Car management/force-app/main/default/objects/Salon__c/fields/Adres__c.field-meta.xml
<CustomField>
    <fullName>Adres__c</fullName>
    <label>Adres</label>
    <type>TextArea</type>
</CustomField>