Car management/force-app/main/default/objects/Salon__c/fields/Salon_status__c.field-meta.xml
<CustomField>
    <fullName>Salon_status__c</fullName>
    <label>Salon status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Open day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>