Car management/force-app/main/default/objects/Salon__c/fields/Strona__c.field-meta.xml
<CustomField>
    <fullName>Strona__c</fullName>
    <label>Strona</label>
    <type>Url</type>
</CustomField>