Car management/force-app/main/default/objects/Salon__c/fields/Typ__c.field-meta.xml
<CustomField>
    <fullName>Typ__c</fullName>
    <label>Typ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Samochody osobowe</fullName>
                <default>true</default>
                <label>Samochody osobowe</label>
            </value>
            <value>
                <fullName>Samochody specjalistyczne</fullName>
            </value>
            <value>
                <fullName>Wszystkie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>