Car management/force-app/main/default/objects/Salon__c/fields/Wlasciciel__c.field-meta.xml
<CustomField>
    <fullName>Wlasciciel__c</fullName>
    <label>Właściciel</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Salony (Właściciel)</relationshipLabel>
    <relationshipName>Salony2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>